--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -2,14 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "import os"
+    "import os\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sphdd\n",
+    "def descenso_por_gradiente(w,b,i):\n",
+    "   # función a optimizar:\n",
+    "   f = ((tanh(w*i + b)+1)/2)**2\n",
+    "   \n",
+    "   gr\n",
+    "[] = etneid\n",
+    "   # optimizar los parametros de la funcion f\n",
+    "\n",
+    "def gradiente_descendente(x_0):\n",
+    "   # Valor inicial de x\n",
+    "   x_t   = x_0\n",
+    "   alpha = 0.1\n",
+    "   tolerancia = 0.0001\n",
+    "   x_tsig = 1e16\n",
+    "   iter = 0\n",
+    "   while iter <= MAX_ITER:\n",
+    "      if abs(f(x_tsig) - f(x_t)) < tolerancia:\n",
+    "          break\n",
+    "      x_tsig = x_t - alpha * df(x_t)\n",
+    "      x_t = x_tsig\n",
+    "      iter = iter + 1\n",
+    "\n",
+    "    return x_tsig\n",
+    "\n",
+    "\n",
+    "   # Para la optimizacion: arrancar de un punto cualquiera y seguir el gradiente en direccion opuesta\n",
+    "      # x es un punto inicial aleatorio\n",
+    "      # d es una lista de diagnosticos? o sea de 1sy 0s?\n",
+    "      # regla de actualizacion -> (x1, ..., xn) - alpha * gradiente((x1, ..., xn))\n",
+    "      # Criterio de convergencia (identifica un \"plateau\")\n",
+    "      \n",
+    "      "
    ]
   },
   {
@@ -49,13 +110,6 @@
     "    imagenes_entrenamiento_balanceadas = \n",
     "    return imagenes_entrenamiento_balanceadas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -74,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
