empezamos con descenso

--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -2,30 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
     "import os\n",
@@ -38,39 +20,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sphdd\n",
-    "def descenso_por_gradiente(w,b,i):\n",
-    "   # función a optimizar:\n",
-    "   f = ((tanh(w*i + b)+1)/2)**2\n",
+    "def f(x, b, w, i, d):\n",
+    "   return ((math.tanh(w * i + b) + 1) / 2 - d)**2\n",
+    "def dfw(b, w, i, d):\n",
+    "   t_0 = math.tanh(b+w*i)\n",
+    "   return (1-t_0**2)*(((t_0+1)/2)-d)*i\n",
+    "def dfb(b, w, i, d):\n",
+    "   t_0 = math.tanh(b+w*i)\n",
+    "   return (1-t_0**2)*(((t_0+1)/2)-d)\n",
     "   \n",
-    "   gr\n",
-    "[] = etneid\n",
-    "   # optimizar los parametros de la funcion f\n",
-    "\n",
-    "def gradiente_descendente(x_0):\n",
+    "def descenso_por_gradiente(w, b, i, d, x_0):\n",
+    "   # función a optimizar\n",
     "   # Valor inicial de x\n",
+    "   gradiente = [dfb(w,b,i,d),dfw(w,b,i,d)]\n",
     "   x_t   = x_0\n",
     "   alpha = 0.1\n",
-    "   tolerancia = 0.0001\n",
-    "   x_tsig = 1e16\n",
+    "   TOLERANCIA = 0.0001\n",
     "   iter = 0\n",
-    "   while iter <= MAX_ITER:\n",
-    "      if abs(f(x_tsig) - f(x_t)) < tolerancia:\n",
-    "          break\n",
-    "      x_tsig = x_t - alpha * df(x_t)\n",
+    "   while abs(f(x_tsig, b, w, i, d) - f(x_t, b, w, i, d)) > TOLERANCIA:\n",
+    "      x_tsig = x_t - alpha * gradiente\n",
     "      x_t = x_tsig\n",
     "      iter = iter + 1\n",
     "\n",
-    "    return x_tsig\n",
+    "   return x_tsig\n",
     "\n",
     "\n",
     "   # Para la optimizacion: arrancar de un punto cualquiera y seguir el gradiente en direccion opuesta\n",
     "      # x es un punto inicial aleatorio\n",
     "      # d es una lista de diagnosticos? o sea de 1sy 0s?\n",
     "      # regla de actualizacion -> (x1, ..., xn) - alpha * gradiente((x1, ..., xn))\n",
-    "      # Criterio de convergencia (identifica un \"plateau\")\n",
-    "      \n",
-    "      "
+    "      # Criterio de convergencia (identifica un \"plateau\")"
    ]
   },
   {
@@ -110,6 +89,13 @@
     "    imagenes_entrenamiento_balanceadas = \n",
     "    return imagenes_entrenamiento_balanceadas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -128,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
