--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
@@ -18,10 +29,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "def f(x, b, w, i, d):\n",
+    "def error(x, b, w, i, d): # lagrangiano\n",
+    "   # funcion a minimizar\n",
     "   return ((math.tanh(w * i + b) + 1) / 2 - d)**2\n",
+    "\n",
+    "def f(x, w, b): # modelo\n",
+    "   return (1/2) * (math.tanh(np.dot(x, w) + b) + 1)\n",
+    "\n",
     "def dfw(b, w, i, d):\n",
     "   t_0 = math.tanh(b+w*i)\n",
     "   return (1-t_0**2)*(((t_0+1)/2)-d)*i\n",
@@ -54,9 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def abrirImagenesEscaladas( carpeta, escala=32 ):\n",
     "    # abre todas las imagenes de la carpeta, y las escala de tal forma que midan (escala x escala)px\n",
@@ -83,7 +121,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def balancear_datos(imagenes_entrenamiento):\n",
     "    imagenes_entrenamiento_balanceadas = \n",
@@ -94,7 +143,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -114,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
