agregamos lagrang etc

--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sp\n",
@@ -27,45 +16,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def error(x, b, w, i, d): # lagrangiano\n",
+    "def lagrangiano(b, w, i, d): # lagrangiano\n",
     "   # funcion a minimizar\n",
-    "   return ((math.tanh(w * i + b) + 1) / 2 - d)**2\n",
+    "   sum = 0\n",
+    "   for imagen in i:\n",
+    "      # (imagen=vector) le queremos pasar una columna de i porque en la formula usa un vector (col de i)\n",
+    "      t_0:float = math.tanh(b+w@imagen) \n",
+    "      sum += ((math.tanh(w * imagen + b) + 1) / 2 - d)**2\n",
+    "      idx += 1 \n",
+    "   return sum\n",
     "\n",
-    "def f(x, w, b): # modelo\n",
-    "   return (1/2) * (math.tanh(np.dot(x, w) + b) + 1)\n",
+    "def f(w:list, b:int, i:list[list]): # funcion normal. f \n",
+    "   return (math.tanh(w@i + b) + 1)/2\n",
     "\n",
-    "def dfw(b, w, i, d):\n",
-    "   t_0 = math.tanh(b+w*i)\n",
-    "   return (1-t_0**2)*(((t_0+1)/2)-d)*i\n",
-    "def dfb(b, w, i, d):\n",
-    "   t_0 = math.tanh(b+w*i)\n",
-    "   return (1-t_0**2)*(((t_0+1)/2)-d)\n",
+    "def dfw(b, w, i:list[list], d:list):\n",
+    "   # derivada del lagrangiano contra w\n",
+    "   sum = 0\n",
+    "   for imagen in i:\n",
+    "      # (imagen=vector) le queremos pasar una columna de i porque en la formula usa un vector (col de i)\n",
+    "      t_0:float = math.tanh(b+w@imagen) \n",
+    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))*imagen\n",
+    "      idx += 1 \n",
+    "   return sum\n",
+    "\n",
+    "def dfb(b, w, i:list[list], d:list):\n",
+    "   # derivada del lagrangiano contra b\n",
+    "   sum = 0\n",
+    "   idx = 0\n",
+    "   for imagen in i:\n",
+    "      # (imagen=vector) le queremos pasar una columna de i porque en la formula usa un vector (col de i)\n",
+    "      t_0:float = math.tanh(b+w@imagen) \n",
+    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))\n",
+    "      idx += 1 \n",
+    "   return sum\n",
+    "\n",
+    "def gradiente(b,w,i:list[list],d:list, x_t):\n",
+    "   # x es un punto de i_j (imagen aplanada = vector de tamaño escala*escala) (i: conjunto de imagenes)(i_j:imagen j del conjunto)\n",
+    "   # gradiente tiene una tupla: derivada de f contra b, derivada de f contra w.\n",
     "   \n",
-    "def descenso_por_gradiente(w, b, i, d, x_0):\n",
+    "   # n es la cant de columnad de la imagen == escala == sqrt(imagen.shape)\n",
+    "   # para acceder a la posicion x_t de una imagen aplanada hay que acceder a la pos (x_t[0]*(sqrt(imagen.shape)))+x_t[1]\n",
+    "   \n",
+    "   dfb_1 = dfb(b,w,i,d)\n",
+    "   dfw_1 = dfw(b,w,i,d)\n",
+    "   \n",
+    "   return (dfb_1,dfw_1)\n",
+    "   \n",
+    "# x_0 es un punto aleatorio en Rn\n",
+    "# x_0 va a tener un valor aleatorio de b y un valor aleatorio de w\n",
+    "def descenso_por_gradiente(w, b, i, d, x_0:tuple):\n",
     "   # función a optimizar\n",
-    "   # Valor inicial de x\n",
-    "   gradiente = [dfb(w,b,i,d),dfw(w,b,i,d)]\n",
     "   x_t   = x_0\n",
     "   alpha = 0.1\n",
     "   TOLERANCIA = 0.0001\n",
     "   iter = 0\n",
     "   while abs(f(x_tsig, b, w, i, d) - f(x_t, b, w, i, d)) > TOLERANCIA:\n",
-    "      x_tsig = x_t - alpha * gradiente\n",
+    "      x_tsig = x_t - alpha * gradiente(x_t, b, w, i)\n",
     "      x_t = x_tsig\n",
     "      iter = iter + 1\n",
     "\n",
@@ -81,22 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'miniconda3 (Python 3.12.1)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -p c:\\Users\\Belen\\miniconda3 ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.69019608 0.43921569 0.25490196 ... 0.11764706 0.12156863 0.1254902 ]\n",
+      "(1024,)\n"
      ]
     }
    ],
    "source": [
-    "def abrirImagenesEscaladas( carpeta, escala=32 ):\n",
+    "def abrirImagenesEscaladas( carpeta, escala=32):\n",
     "    # abre todas las imagenes de la carpeta, y las escala de tal forma que midan (escala x escala)px\n",
     "    # devuelve las imagenes aplanadas -> vectores de tamano escala^2 con valores entre 0 y 1\n",
     "    imagenes = []\n",
@@ -113,9 +121,18 @@
     "                img = img.reshape((escala**2 )) / 255\n",
     "            \n",
     "            imagenes.append( img )\n",
+    "    \n",
+    "    return imagenes\n",
     "\n",
-    "    return imagenes"
+    "imagenes = abrirImagenesEscaladas('Instancia', 32)\n",
+    "print(imagenes[0]) # una imagen aplanada es un vector de escala*escala, no una matriz!!!\n",
+    "print(imagenes[0].shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -174,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
