--- a/codigo_de_los_chicos/DescXGrad.ipynb
+++ b/codigo_de_los_chicos/DescXGrad.ipynb
@@ -2,9 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.0.0-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "     ---------------------------------------- 0.0/60.9 kB ? eta -:--:--\n",
+      "     ------ --------------------------------- 10.2/60.9 kB ? eta -:--:--\n",
+      "     ------------- ------------------------- 20.5/60.9 kB 93.1 kB/s eta 0:00:01\n",
+      "     ------------------- ------------------ 30.7/60.9 kB 130.4 kB/s eta 0:00:01\n",
+      "     ------------------------------- ------ 51.2/60.9 kB 187.0 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 60.9/60.9 kB 215.6 kB/s eta 0:00:00\n",
+      "Downloading numpy-2.0.0-cp312-cp312-win_amd64.whl (16.2 MB)\n",
+      "   ---------------------------------------- 0.0/16.2 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/16.2 MB 9.8 MB/s eta 0:00:02\n",
+      "   -- ------------------------------------- 1.2/16.2 MB 12.6 MB/s eta 0:00:02\n",
+      "   ---- ----------------------------------- 2.0/16.2 MB 15.6 MB/s eta 0:00:01\n",
+      "   ------ --------------------------------- 2.7/16.2 MB 14.4 MB/s eta 0:00:01\n",
+      "   -------- ------------------------------- 3.5/16.2 MB 15.7 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 4.2/16.2 MB 14.8 MB/s eta 0:00:01\n",
+      "   ------------ --------------------------- 5.0/16.2 MB 15.3 MB/s eta 0:00:01\n",
+      "   ------------- -------------------------- 5.6/16.2 MB 15.0 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 6.9/16.2 MB 14.8 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------ --------------------- 7.6/16.2 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 8.0/16.2 MB 10.1 MB/s eta 0:00:01\n",
+      "   --------------------- ------------------ 8.7/16.2 MB 10.3 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 9.3/16.2 MB 10.4 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 9.7/16.2 MB 10.6 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 10.3/16.2 MB 8.4 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 11.0/16.2 MB 8.6 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 11.7/16.2 MB 8.5 MB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 11.9/16.2 MB 8.5 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.3/16.2 MB 8.2 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.4/16.2 MB 8.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.4/16.2 MB 8.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.4/16.2 MB 8.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.4/16.2 MB 8.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 12.4/16.2 MB 8.1 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 12.7/16.2 MB 6.7 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 13.4/16.2 MB 6.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 14.0/16.2 MB 6.7 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 14.6/16.2 MB 6.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 14.7/16.2 MB 6.7 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 15.0/16.2 MB 6.5 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 15.2/16.2 MB 6.5 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 15.4/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  15.8/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.0/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.0/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.0/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.0/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.0/16.2 MB 6.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.2/16.2 MB 5.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  16.2/16.2 MB 5.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 16.2/16.2 MB 5.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
