hola soy german

--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -64,69 +64,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# lagrangiano\n",
-    "def L(x_t, i, d):\n",
-    "   # funcion a minimizar\n",
-    "   w = x_t[0]\n",
-    "   b = x_t[1]\n",
-    "   sum = 0\n",
-    "   idx = 0\n",
-    "   for imagen in i:\n",
-    "      t_0:float = math.tanh(w@imagen+b) \n",
-    "      sum += ((t_0 + 1) / 2 - d[idx])**2\n",
-    "      idx += 1\n",
-    "   return sum\n",
-    "\n",
-    "def dl_w(w,b, i:list[list], d:list):\n",
-    "   # derivada del lagrangiano contra w\n",
-    "   idx = 0\n",
-    "   sum = 0\n",
-    "   for imagen in i:\n",
-    "      t_0:float = math.tanh(b+w@imagen) \n",
-    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))*imagen\n",
-    "      idx += 1 \n",
-    "   return sum\n",
-    "\n",
-    "def dl_b(w,b, i:list[list], d:list):\n",
-    "   # derivada del lagrangiano contra b\n",
-    "   sum = 0\n",
-    "   idx = 0\n",
-    "   for imagen in i:\n",
-    "      t_0:float = math.tanh(b+w@imagen) \n",
-    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))\n",
-    "      idx += 1 \n",
-    "   return sum\n",
-    "\n",
-    "def gradiente(x_t,i:list[list],d:list):\n",
-    "   # gradiente tiene una tupla: derivada del error contra b, derivada del error contra w.\n",
-    "   w = x_t[0]\n",
-    "   b = x_t[1]\n",
-    "   res = [dl_w(w,b,i,d), dl_b(w,b,i,d)]\n",
-    "   return res\n",
-    "\n",
-    "def descenso_por_gradiente(i, d, alpha=0.001, MAX_ITER=1000):\n",
-    "   # función a optimizar\n",
-    "   np.random.seed(42)\n",
-    "   K = len(i[0])\n",
-    "   w_0 = np.random.randn(K) # w es un vector de R^K tq K=cant de píxeles en una imagen. Inicialmente es un vector aleatorio.\n",
-    "   b_0 = 0.0\n",
-    "   x_t = (w_0, b_0)\n",
-    "   loss = [] \n",
-    "   iter = 0\n",
-    "   while iter < MAX_ITER:\n",
-    "      x_tsig = [x_t[0] - (alpha * gradiente(x_t, i, d)[0]), x_t[1] - (alpha * gradiente(x_t, i, d)[1])]\n",
-    "      loss.append(L(x_tsig, i, d))\n",
-    "      # if abs(L(x_tsig, i, d) - L(x_t, i, d)) < TOLERANCIA and L(x_tsig, i, d)<=0.05:\n",
-    "      #    break \n",
-    "      x_t = x_tsig\n",
-    "      iter = iter + 1\n",
-    "   return x_tsig, loss"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -190,8 +127,73 @@
     "   matriz[0][1]=imagenes_sin.count(1)/n\n",
     "   matriz[1][0]=imagenes_con.count(0)/n\n",
     "   matriz[1][1]=imagenes_sin.count(0)/n\n",
-    "   \n",
+    "   #hola\n",
     "   return matriz\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lagrangiano\n",
+    "def L(x_t, i, d):\n",
+    "   # funcion a minimizar\n",
+    "   w = x_t[0]\n",
+    "   b = x_t[1]\n",
+    "   sum = 0\n",
+    "   idx = 0\n",
+    "   for imagen in i:\n",
+    "      t_0:float = math.tanh(w@imagen+b) \n",
+    "      sum += ((t_0 + 1) / 2 - d[idx])**2\n",
+    "      idx += 1\n",
+    "   return sum\n",
+    "\n",
+    "def dl_w(w,b, i:list[list], d:list):\n",
+    "   # derivada del lagrangiano contra w\n",
+    "   idx = 0\n",
+    "   sum = 0\n",
+    "   for imagen in i:\n",
+    "      t_0:float = math.tanh(b+w@imagen) \n",
+    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))*imagen\n",
+    "      idx += 1 \n",
+    "   return sum\n",
+    "\n",
+    "def dl_b(w,b, i:list[list], d:list):\n",
+    "   # derivada del lagrangiano contra b\n",
+    "   sum = 0\n",
+    "   idx = 0\n",
+    "   for imagen in i:\n",
+    "      t_0:float = math.tanh(b+w@imagen) \n",
+    "      sum += (1-t_0**2)*(((t_0+1)/2-d[idx]))\n",
+    "      idx += 1 \n",
+    "   return sum\n",
+    "\n",
+    "def gradiente(x_t,i:list[list],d:list):\n",
+    "   # gradiente tiene una tupla: derivada del error contra b, derivada del error contra w.\n",
+    "   w = x_t[0]\n",
+    "   b = x_t[1]\n",
+    "   res = [dl_w(w,b,i,d), dl_b(w,b,i,d)]\n",
+    "   return res\n",
+    "\n",
+    "def descenso_por_gradiente(i, d, alpha=0.001, MAX_ITER=1000):\n",
+    "   # función a optimizar\n",
+    "   np.random.seed(42)\n",
+    "   K = len(i[0])\n",
+    "   w_0 = np.random.randn(K) # w es un vector de R^K tq K=cant de píxeles en una imagen. Inicialmente es un vector aleatorio.\n",
+    "   b_0 = 0.0\n",
+    "   x_t = (w_0, b_0)\n",
+    "   loss = [] \n",
+    "   iter = 0\n",
+    "   while iter < MAX_ITER:\n",
+    "      x_tsig = [x_t[0] - (alpha * gradiente(x_t, i, d)[0]), x_t[1] - (alpha * gradiente(x_t, i, d)[1])]\n",
+    "      loss.append(L(x_tsig, i, d))\n",
+    "      # if abs(L(x_tsig, i, d) - L(x_t, i, d)) < TOLERANCIA and L(x_tsig, i, d)<=0.05:\n",
+    "      #    break \n",
+    "      x_t = x_tsig\n",
+    "      iter = iter + 1\n",
+    "   return x_tsig, loss"
    ]
   },
   {
