--- a/DescXGrad.ipynb
+++ b/DescXGrad.ipynb
@@ -121,6 +121,7 @@
     "   b_0 = 0.0\n",
     "   x_t = (w_0, b_0)\n",
     "   loss = [] \n",
+    "   loss.append(L(x_t, i, d))\n",
     "   iter = 0\n",
     "   while iter < MAX_ITER:\n",
     "      x_tsig = [x_t[0] - (alpha * gradiente(x_t, i, d)[0]), x_t[1] - (alpha * gradiente(x_t, i, d)[1])]\n",
@@ -242,13 +243,12 @@
     "print(f\"{fin - inicio} seg\")\n",
     "print('normalizado', loss_train[-1])\n",
     "\n",
-    "\n",
-    "# plt.plot(loss_train, label='Train Loss')\n",
-    "# # plt.plot(loss_test, label='Test Loss')\n",
-    "# plt.xlabel('iteraciones')\n",
-    "# plt.ylabel('Loss')\n",
-    "# plt.legend()\n",
-    "# plt.show()\n",
+    "plt.plot(loss_train, label='Train Loss')\n",
+    "# plt.plot(loss_test, label='Test Loss')\n",
+    "plt.xlabel('iteraciones')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
     "\n",
     "matriz = matriz_confusion(\"test\", ESCALA, optimo[0], optimo[1])\n",
     "# [0][0]=true positive, [0][1]=false positive, [1][0]=false negative, [1][1]=true negative\n",
